force-app/main/default/objects/AI_Evaluation__c/AI_Evaluation__c.object-meta.xml
<CustomObject>
    <description>AI quality, confidence and evaluation metrics for RESCUE agents.</description>
    <label>AI Evaluation</label>
    <nameField>
        <displayFormat>AIE-{0000}</displayFormat>
        <label>Evaluation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AI Evaluations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>