force-app/main/default/objects/AI_Evaluation__c/fields/Evaluation_Status__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Status__c</fullName>
    <label>Evaluation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
                <default>true</default>
                <label>Pass</label>
            </value>
            <value>
                <fullName>Warn</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>