force-app/main/default/objects/AI_Evaluation__c/fields/Quality_Score__c.field-meta.xml
<CustomField>
    <fullName>Quality_Score__c</fullName>
    <label>Quality Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>