force-app/main/default/objects/AI_Evaluation__c/fields/Recommendations__c.field-meta.xml
<CustomField>
    <fullName>Recommendations__c</fullName>
    <label>Recommendations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>